<resources>
    <string name="app_name">SportApp</string>

    <string name="update_team_match_title">Update Team Match</string>

    <!--    TITLES-->
    <string name="create_event_title">Create Event</string>

    <string name="create_team_title">Create Team</string>
    <string name="update_team_title">Update Team</string>

    <string name="create_athlete_title">Create Single Athlete</string>
    <string name="update_athlete_title">Update Single Athlete</string>

    <string name="create_sport_title">Create Sport</string>
    <string name="update_sport_title">Update Sport</string>

    <!--    LABELS-->
    <string name="team_label">Team</string>
    <string name="team_id_label">Id:</string>
    <string name="team_name_label">Team Name:</string>
    <string name="stadium_name_label">Stadium Name:</string>
    <string name="team_city_label">Team\'s City:</string>
    <string name="team_country_label">Team\'s Country:</string>
    <string name="team_sport_label">Team\'s Sport</string>
    <string name="team_date_foundation_label">Team\'s Foundation Date:</string>
    <string name="welcome_label">Welcome</string>

    <string name="athlete_label">Athlete</string>
    <string name="athlete_name_label">Athlete First Name:</string>
    <string name="athlete_surname_label">Athlete Last Name:</string>
    <string name="athlete_city_label">Athlete\'s City:</string>
    <string name="athlete_country_label">Athlete\'s Country:</string>d
    <string name="athlete_date_of_birth_label">Athlete\'s Date of Birth:</string>

    <string name="sport_label">Sport</string>
    <string name="sport_name_label">Sport Name:</string>
    <string name="sport_type_label">Sport Type:</string>
    <string name="sport_gender_label">Sports Gender:</string>

    <!--    HINTS-->
    <string name="stadium_name_hint">The full name of stadium</string>
    <string name="team_name_hint">The full name of the team</string>
    <string name="team_city_hint">The city of the team</string>
    <string name="team_country_hint">The country of the team:</string>
    <string name="team_date_foundation_hint">The date the team was founded</string>

    <string name="athlete_name_hint">The first name of the athlete</string>
    <string name="athlete_surname_hint">The last name of the athlete</string>
    <string name="athlete_city_hint">The city of the athlete</string>
    <string name="athlete_country_hint">The country of the athlete:</string>
    <string name="athlete_date_of_birth_hint">The date the athlete was born</string>

    <string name="sport_name_hint">sport name</string>
    <string name="sport_type_hint">SINGLE or TEAM</string>
    <string name="sport_gender_hint">MALE or FEMALE or BOTH</string>

    <!--    Buttons-->
    <string name="team_create_button">Create Team</string>
    <string name="team_update_button">Update Team</string>
    <string name="team_delete_button">Delete Team</string>
    <string name="single_athlete_create_button">Create Single Athlete</string>
    <string name="team_athlete_create_button">Create Team Athlete</string>
    <string name="athlete_update_button">Update Athlete</string>
    <string name="athlete_delete_button">Delete Athlete</string>
    <string name="athlete_insert_menu">Create New Athlete</string>
    <string name="sport_create_button">Create Sport</string>
    <string name="sport_update_button">Update Sport</string>
    <string name="sport_delete_button">Delete Sport</string>

    <!--    MENU-->
    <string name="menu_item_team_matches">Team Matches</string>
    <string name="menu_item_add_single_match">Add Single Match</string>
    <string name="menu_item_add_team_match">Add Team Match</string>
    <string name="menu_item_athletes">Athletes</string>
    <string name="menu_item_add_single_athlete">Add Single Athlete</string>
    <string name="menu_item_add_team_athlete">Add Team Athlete</string>
    <string name="menu_item_delete_athlete">Delete Athlete</string>
    <string name="menu_item_sports">Sports</string>
    <string name="menu_item_add_sports">Add Sport</string>
    <string name="menu_item_delete_sport">Delete Sport</string>
    <string name="menu_item_teams">Teams</string>
    <string name="menu_item_add_team">Add Team</string>
    <string name="menu_item_update_team">Update Team</string>
    <string name="menu_item_delete_team">Delete Team</string>


    <!--    TOAST MESSAGES-->
    <string name="added_team_success_message">The team was successfully added.</string>
    <string name="update_team_success_message">The team was successfully updated.</string>

    <string name="added_athlete_success_message">The athlete was successfully added.</string>
    <string name="update_athlete_success_message">The athlete was successfully updated.</string>

    <string name="added_sport_success_message">The sport was successfully added.</string>
    <string name="update_sport_success_message">The sport was successfully updated.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="event_name_label">Event Name</string>
    <string name="event_name_hint">The name of the event</string>
    <string name="event_date_label">Event Date</string>
    <string name="event_date_hint">The date the event took place</string>
    <string name="event_city_label">City</string>
    <string name="event_city_hint">The city the event took place in</string>
    <string name="event_country_label">Country</string>
    <string name="event_country_hint">Country the event took place in</string>
    <string name="event_create_button">Create Event</string>
    <string name="menu_item_teams_group_by_sport">Teams Grouped By Sport</string>
    <string name="label_available_sports">Available Sports</string>
    <string name="label_teams">Found Teams In Sport</string>
    <string name="athlete_sport_label">Athelet\'s Sport</string>
    <string name="athlete_team_label">Athelet\'s Team</string>
    <string name="athlete_type_label">Athlete Type</string>
    <string name="team_athlete_update_button">Update Team Athlete</string>
    <string name="update_team_athlete_title">Update Team Athlete</string>
    <string name="create_team_athlete_title">Create Team Athlete</string>
    <string name="team_match_delete_button">Delete Team Match</string>
    <string name="team_match_update_button">Update Team Match</string>
    <string name="event_athlete_score">Athlete Score:</string>
    <string name="event_type_select_hint">Select the type of event at the bottom.</string>
    <string name="event_single_button">Single Match</string>
    <string name="event_track_button">Track Event</string>
    <string name="event_race_button">Race</string>
    <string name="event_team_button">Team Match</string>
    <string name="menu_item_single_match">Athlete Match</string>
    <string name="event_team_score">Team Score:</string>
    <string name="menu_item_team_match">Team Match</string>
    <string name="create_single_match_title">Create  Single Match</string>
    <string name="create_team_match_title">Create  Team Match</string>
    <string name="match_city_label">Match City:</string>
    <string name="match_city_hint">The city the match took place.</string>
    <string name="match_country_label">Match Country:</string>
    <string name="match_country_hint">The country the match took place in.</string>
    <string name="match_date_label">Match Date:</string>
    <string name="match_date_hint">When did the match take place.</string>
    <string name="match_sport_label">Sport:</string>
    <string name="single_match_create_button">Create Single Match</string>
    <string name="single_match_score">AthleteScore:</string>
    <string name="team_match_create_button">Create Team Match</string>
    <string name="team_match_score">Team Score:</string>
    <string name="first_team_label">First Team:</string>
    <string name="second_team_label">Second Team:</string>
    <string name="first_team_score_label">First Team Score:</string>
    <string name="team_match_vs_label">VS</string>
    <string name="second_team_score_label">Second Team Score:</string>
    <string name="team_match_date_label">Date Of Match:</string>
    <string name="menu_item_team_athletes">Team Athletes</string>
    >>>>>>> bcced1b0ce4d8aced0033f37adc1385e5b068442

</resources>