<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/athleteMainMenuFragment"
        android:icon="@drawable/baseline_person_18"
        android:title="@string/menu_item_athletes" />
    <item
        android:id="@+id/sportMainFragment"
        android:icon="@drawable/baseline_sports_20"
        android:title="@string/menu_item_sports" />
    <item
        android:id="@+id/teamsDestination"
        android:icon="@drawable/baseline_groups_24"
        android:title="@string/menu_item_teams" />
    <item
        android:id="@+id/teamMatchesDestination"
        android:icon="@android:drawable/btn_star_big_on"
        android:title="@string/menu_item_team_matches" />
    <item
        android:id="@+id/teamAthletesDestination"
        android:icon="@android:drawable/btn_star_big_on"
        android:title="@string/menu_item_team_athletes" />
</menu>